--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="osu.kallasm.geartracker">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".WeaponsList" />
-        <activity android:name=".AttachmentsList"></activity>
+        <activity android:name=".AttachmentsList" />
+        <activity android:name=".AddWeapon"></activity>
     </application>
 
 </manifest>
